profile and referralProgram and Subscriptions and Domain and SetUp UserManagement data update 0215

--- a/Front/src/tpl/delete-confirm-dialog.html
+++ b/Front/src/tpl/delete-confirm-dialog.html
@@ -15,7 +15,7 @@
     </md-dialog-content>
 
     <md-dialog-actions>
-        <md-button class="md-primary md-raised" ng-click="ctrl.ok()">{{'ok' | translate}}</md-button>
+        <md-button class="md-primary md-raised" ng-click="ctrl.ok()">{{'ok111' | translate}}</md-button>
         <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
     </md-dialog-actions>
 </md-dialog>
