--- a/Front/src/tpl/profile.html
+++ b/Front/src/tpl/profile.html
@@ -21,7 +21,7 @@
         <div class="form-group">
           <label>Default time zone</label>
           <md-select class="cs-subform-select" ng-model="accountItem.timezone" required>
-            <md-option value="1">(UTC-12:00) International Date Line West</md-option>
+            <md-option value="+08:00">(UTC-12:00) International Date Line West</md-option>
             <md-option value="2">(UTC-11:00) Coordinated Universal Time-11</md-option>
             <md-option value="3">(UTC-10:00) Hawaii</md-option>
           </md-select>
@@ -30,21 +30,10 @@
           <label>Default home screen</label>
           <div class="campaign-radio">
             <label class="radio-inline">
-              <input type="radio" ng-model="accountItem.homescreen" value="Dashboard" selected>Dashboard
+              <input type="radio" ng-model="accountItem.homescreen" value="dashboard" checked>Dashboard
             </label>
             <label class="radio-inline">
               <input type="radio" ng-model="accountItem.homescreen" value="Campaign list">Campaign list
-            </label>
-          </div>
-        </div>
-        <div class="form-group clearfix">
-          <label>Conversion registration time reporting</label>
-          <div class="campaign-radio">
-            <label class="radio-inline">
-              <input type="radio" ng-model="accountItem.visitconversion" value="Visit" selected>Visit
-            </label>
-            <label class="radio-inline">
-              <input type="radio" ng-model="accountItem.visitconversion" value="Conversion">Conversion
             </label>
           </div>
         </div>
@@ -116,7 +105,11 @@
     <div class="col-md-6">
       <div class="form-group">
         <label>Change e-mail address</label>
-        <input type="email" placeholder="Email" class="form-control no-border" ng-model="emailItem.emailaddress" required>
+        <input type="email" placeholder="Email" class="form-control no-border" ng-model="emailItem.email" ng-blur="checkEmail()" required>
+        <span style="color:red" ng-show="form.email.$dirty && form.email.$invalid">
+          <span ng-show="form.email.$error.email">Email must be a valid Email</span>
+          <span ng-show="form.email.$error.check">Email is exist</span>
+        </span>
       </div>
       <div class="form-group">
         <label>Confirm with your password</label>
