--- a/Front/src/tpl/setUp.html
+++ b/Front/src/tpl/setUp.html
@@ -10,19 +10,19 @@
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Click URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.name" required>
+          <input type="text" class="form-control" ng-model="item.clickurl" required>
         </div>
         <div class="col-md-3">
-          <md-button class="md-raised copy-btn">Copy to clipboard</md-button>
+          <md-button clipboard class="md-raised copy-btn" text="item.clickurl" ng-click="itemUrlClick('copy1')">{{btn.copy1}}</md-button>
         </div>
     </div>
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Multi-offer click URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.name" required>
+          <input type="text" class="form-control" ng-model="item.multiofferclickurl" required>
         </div>
         <div class="col-md-3">
-          <md-button class="md-raised copy-btn">Copy to clipboard</md-button>
+          <md-button clipboard class="md-raised copy-btn" text="item.multiofferclickurl" ng-click="itemUrlClick('copy2')">{{btn.copy2}}</md-button>
         </div>
     </div>
     <div class="domain-p">
@@ -35,19 +35,19 @@
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Postback URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.name" required>
+          <input type="text" class="form-control" ng-model="item.postbackurl" required>
         </div>
         <div class="col-md-3">
-          <md-button class="md-raised copy-btn">Copy to clipboard</md-button>
+          <md-button clipboard class="md-raised copy-btn" text="item.postbackurl" ng-click="itemUrlClick('copy3')">{{btn.copy3}}</md-button>
         </div>
     </div>
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Secure postback URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.name" required>
+          <input type="text" class="form-control" ng-model="item.securepostbackurl" required>
         </div>
         <div class="col-md-3">
-          <md-button class="md-raised copy-btn">Copy to clipboard</md-button>
+          <md-button clipboard class="md-raised copy-btn" text="item.securepostbackurl" ng-click="itemUrlClick('copy4')">{{btn.copy4}}</md-button>
         </div>
     </div>
     <div class="domain-p">
@@ -59,28 +59,28 @@
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Tracking pixel URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.name" required>
+          <input type="text" class="form-control" ng-model="item.trackingpixelurl" required>
         </div>
         <div class="col-md-3">
-          <md-button class="md-raised copy-btn">Copy to clipboard</md-button>
+          <md-button clipboard class="md-raised copy-btn" text="item.trackingpixelurl" ng-click="itemUrlClick('copy5')">{{btn.copy5}}</md-button>
         </div>
     </div>
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Tracking pixel</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.name" required>
+          <input type="text" class="form-control" ng-model="item.trackingpixel" required>
         </div>
         <div class="col-md-3">
-          <md-button class="md-raised copy-btn">Copy to clipboard</md-button>
+          <md-button clipboard class="md-raised copy-btn" text="item.trackingpixel" ng-click="itemUrlClick('copy6')">{{btn.copy6}}</md-button>
         </div>
     </div>
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Tracking script</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.name" required>
+          <input type="text" class="form-control" ng-model="item.trackingscript" required>
         </div>
         <div class="col-md-3">
-          <md-button class="md-raised copy-btn">Copy to clipboard</md-button>
+          <md-button clipboard class="md-raised copy-btn" text="item.trackingscript" ng-click="itemUrlClick('copy7')">{{btn.copy7}}</md-button>
         </div>
     </div>
     </div>
