--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -8,57 +8,57 @@
 			<table>
 				<tr>
 					<td>Next issued plan:</td>
-					<td>PRO</td>
+					<td>{{item.statistic.planCode}}</td>
 				</tr>
 				<tr>
 					<td>Current period:</td>
-					<td>15-01-2017 - 15-02-2017</td>
+					<td>{{item.statistic.from}} - {{item.statistic.to}}</td>
 				</tr>
 				<tr>
 					<td>Free Zeropark events:</td>
-					<td>0</td>
+					<td>{{item.statistic.freeEvents}}</td>
 				</tr>
 				<tr>
 					<td>Billed events:</td>
-					<td>81,630</td>
+					<td>{{item.statistic.billedEvents}}</td>
 				</tr>
 				<tr>
 					<td>Total events:</td>
-					<td>81,630</td>
+					<td>{{item.statistic.totalEvents}}</td>
 				</tr>
 				<tr>
 					<td>Included events:</td>
-					<td>1,000,000</td>
+					<td>{{item.statistic.includedEvents}}</td>
 				</tr>
 				<tr>
 					<td>Remaining events:</td>
-					<td>918,370</td>
+					<td>{{item.statistic.remainEvents}}</td>
 				</tr>
 				<tr>
 					<td>Overage events:</td>
-					<td>0</td>
+					<td>{{item.statistic.overageEvents}}</td>
 				</tr>
 				<tr>
 					<td>Overage cost:</td>
-					<td>0.00$</td>
+					<td>{{item.statistic.overageCost}}</td>
 				</tr>
 			</table>
 		</div>
     </div>
     <div class="col-sm-12 col-md-6">
-					<h3 class="subscription-title">Plan details</h3>
-					<div class="table-out">
-						<div class="plan-detail">
-							<span>Subscription plan:</span>
-							<div class="pro clearfix">
-								<span>Pro</span>
-								<span class="pro-right">
-									<span class="pro-price">$99</span>/mo
-								</span>
-							</div>
-							<md-button class="md-raised copy-btn">Copy to clipboard</md-button>
-						</div>
+			<h3 class="subscription-title">Plan details</h3>
+			<div class="table-out">
+				<div class="plan-detail">
+					<span>Subscription plan:</span>
+					<div class="pro clearfix">
+						<span>{{item.plan.name}}</span>
+						<span class="pro-right">
+							<span class="pro-price">${{item.plan.price}}</span>/mo
+						</span>
 					</div>
+					<md-button class="md-raised copy-btn">Copy to clipboard</md-button>
+				</div>
+			</div>
     </div>
   </div>
 </div>
