--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 
-<div class="cs-report-filter" ng-show="filters.length>0">
+<div class="cs-report-filter hidden">
   <span>Filters:</span>
   <ul>
     <li ng-repeat="f in filters">
