--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css"/>
     <link rel="stylesheet" href="../bower_components/angular-material-data-table/dist/md-data-table.css"/>
     <link rel="stylesheet" href="../bower_components/angular-toastr/dist/angular-toastr.css"/>
+    <link rel="stylesheet" href="../bower_components/selectize/dist/css/selectize.bootstrap3.css"/>
     <link rel="stylesheet" href="assets/css/bootstrap.css"/>
     <link rel="stylesheet" href="assets/css/material-icons.css"/>
     <link rel="stylesheet" href="assets/css/app.css"/>
@@ -38,6 +39,7 @@
 <script src="../bower_components/jquery/dist/jquery.js"></script>
 <script src="../bower_components/moment/min/moment.min.js"></script>
 <script src="../bower_components/chart.js/dist/Chart.min.js"></script>
+<script src="../bower_components/selectize/dist/js/standalone/selectize.min.js"></script>
 <!-- Angular libs -->
 <script src="../bower_components/angular/angular.js"></script>
 <script src="../bower_components/highcharts/highcharts.js"></script>
@@ -59,6 +61,7 @@
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-elastic/elastic.js"></script>
 <script src="../bower_components/angular-chart.js/dist/angular-chart.js"></script>
+<script src="../bower_components/angular-selectize2/dist/angular-selectize.js"></script>
 <script src="../bower_components/angular-clipboard/angular-clipboard.js"></script>
 
 <!-- App -->
