--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -11,7 +11,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Name<span class="star-icon">*</span>：</label>
                 <div class="col-sm-5">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
+                    <input type="text" name="name" class="form-control" ng-model="prefixName" required>
                     <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
                     <span ng-show="editForm.name.$error.required">Name is required.</span>
                     </span>
@@ -54,6 +54,7 @@
                         <span ng-show="editForm.trafficSource.$error.required">TrafficSource is required.</span>
                         </span>
                     </select>
+                    <span class="btn btn-primary" ng-click="addTrafficSource()">Add traffic source</span>
                 </div>
             </div>
             <div class="form-group">
@@ -111,8 +112,9 @@
             </div>
             <div class="form-group tag-items">
                 <label class="col-sm-3 control-label">Tags：</label>
-                <div class="col-sm-5 selectize-input form-group">
-                    <md-chips
+                <div class="col-sm-5">
+                    <selectize config='tagsFilter.config' options='tagsFilter.options' ng-model="tags"></selectize>
+                    <!-- <md-chips
                             ng-model="tags"
                             readonly="ctrl.readonly"
                             md-removable="ctrl.removable"
@@ -121,7 +123,7 @@
                             delete-hint="Press delete to remove tag"
                             secondary-placeholder="+Tag"
                             md-max-chips="10">
-                    </md-chips>
+                    </md-chips> -->
                 </div>
             </div>
 
@@ -213,7 +215,11 @@
                     <div class="col-sm-5">
                         <i>Available URL tokens:</i>
                         <div class="url-tokens">
-                            <div class="url-token" ng-repeat="url in urlItem" ng-click="urlTokenClick(url)">
+                            <div class="url-token"
+                                ng-class="{'selected': item.targetUrl.indexOf(url) > -1}"
+                                ng-repeat="url in urlItem"
+                                ng-click="urlTokenClick(url)"
+                            >
                                 <span class="url-token-icon">+</span>
                                 <span class="url-token-caption">{{url}}</span>
                             </div>
