--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -202,9 +202,10 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Url<span class="star-icon">*</span>：</label>
                     <div class="col-sm-5">
-                        <input my-text="" type="text" class="form-control" name="targetUrl" ng-model="item.targetUrl" ng-required="item.targetType==0">
+                        <input my-text="" type="text" class="form-control" name="targetUrl" ng-model="item.targetUrl" ng-blur="validateUrl()" ng-required="item.targetType==0">
                         <span style="color:red" ng-show="editForm.targetUrl.$dirty && editForm.targetUrl.$invalid">
                         <span ng-show="editForm.targetUrl.$error.required">Url is required.</span>
+                            <span ng-show="editForm.targetUrl.$error.urlformat">URL must be a valid URL.</span>
                         </span>
                     </div>
                 </div>
