--- a/Front/src/tpl/botBlacklist-edit-dialog.html
+++ b/Front/src/tpl/botBlacklist-edit-dialog.html
@@ -20,30 +20,26 @@
             <div class="bot-blacklist-add-content">
               <div class="form-group">
                   <label>IP or IP range</label>
-                  <div class="ip-range clearfix" ng-repeat="ip in ips">
+                  <div class="ip-range clearfix" ng-repeat="ip in ips track by $index">
                     <input type="text" class="form-control" placeholder="IP/IP range(x.x.x.x-x.x.x.x)" ng-model="ip.value" required>
-                    <i class="material-icons">delete</i>
+                    <i class="material-icons" ng-click="deleteIP($index)" ng-show="$index != 0">delete</i>
                   </div>
               </div>
               <div class="clearfix">
-                <div class="add-next-content">
+                <div class="add-next-content" ng-click="addIP()">
                   <i class="material-icons add-next">add_circle</i>
                   Add next
                 </div>
               </div>
               <div class="form-group">
                   <label>Useragent</label>
-                  <div class="ip-range clearfix">
-                    <input type="text" class="form-control" placeholder="Useragent" ng-model="item.name" required>
-                    <i class="material-icons">delete</i>
-                  </div>
-                  <div class="ip-range clearfix">
-                    <input type="text" class="form-control" placeholder="Useragent" ng-model="item.name" required>
-                    <i class="material-icons">delete</i>
+                  <div class="ip-range clearfix" ng-repeat="agent in item.userAgentRules track by $index">
+                    <input type="text" class="form-control" placeholder="Useragent" ng-model="agent.userAgent" required>
+                    <i class="material-icons" ng-click="deleteAgent($index)" ng-show="$index != 0">delete</i>
                   </div>
               </div>
               <div class="clearfix">
-                <div class="add-next-content">
+                <div class="add-next-content" ng-click="addAgent()">
                   <i class="material-icons add-next">add_circle</i>
                   Add next
                 </div>
