--- a/Front/src/tpl/botBlacklist.html
+++ b/Front/src/tpl/botBlacklist.html
@@ -3,21 +3,21 @@
   <p>Bot Blacklist permits you to add bot rules based on IP / IP range and useragent values.
 Once bot rules are enabled, they will be applied globally to all active campaigns with bot traffic events excluded from your reporting.</p>
   <p>Further information regarding the use of the Bot Blacklist can be referenced here.
-The maximum amount of the bot rules that can be created is 20. You can still add 20 bot rule(s).</p>
+The maximum amount of the bot rules that can be created is {{blacklistCount}}. You can still add {{blacklistCount - items.length}} bot rule(s).</p>
 </h1>
 <div class="form-column bot-blacklist">
   <div class="bot-blacklist-content clearfix">
     <div class="form-group bot-select">
       <label>Bot rules: </label>
-        <md-select class="cs-subform-select" name="country" ng-model="item.country" required>
-        <md-option value="Disabled" selected>Disabled</md-option>
-        <md-option value="Enabled">Enabled</md-option>
+        <md-select class="cs-subform-select" ng-model="status"  required>
+            <md-option value="true" selected>Enabled</md-option>
+            <md-option value="false">Disabled</md-option>
         </md-select>
     </div>
     <div class="btn-right">
-      <md-button class="md-raised copy-btn main-domain" ng-click="editItem($event)"><i class="material-icons">add</i>Create New</md-button>
-      <md-button class="md-raised add-another-btn"><i class="material-icons">mode_edit</i>Edit</md-button>
-      <md-button class="md-raised add-another-btn"><i class="material-icons">delete</i>Delete</md-button>
+      <md-button class="md-raised copy-btn main-domain" ng-click="editItem($event, -1)"><i class="material-icons">add</i>Create New</md-button>
+      <!-- <md-button class="md-raised add-another-btn"><i class="material-icons">mode_edit</i>Edit</md-button>
+      <md-button class="md-raised add-another-btn"><i class="material-icons">delete</i>Delete</md-button> -->
     </div>
     <div class="data-table">
       <table md-table class="table">
@@ -29,18 +29,24 @@ The maximum amount of the bot rules that can be created is 20. You can still add
           </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="item in items">
+        <tr ng-repeat="item in items track by $index">
           <td>
             <span uib-dropdown>
                 <a uib-dropdown-toggle>{{item.name}}</a>
                 <ul class="dropdown-menu" uib-dropdown-menu role="menu">
-                    <li role="menuitem"><a ng-click="editItem($event, item)">Edit</a></li>
-                    <li role="menuitem"><a ng-click="deleteItem($event, item)">Delete</a></li>
+                    <li role="menuitem"><a ng-click="editItem($event, $index)">Edit</a></li>
+                    <li role="menuitem"><a ng-click="deleteItem($event, $index)">Delete</a></li>
                 </ul>
               </span>
           </td>
-          <td>{{item.ipRules[0].ipRangeStart}} {{item.ipRules.length}}</td>
-          <td>{{item.userAgentRules[0].userAgent}} {{item.userAgentRules.length}}</td>
+          <td>
+              <em ng-if="item.ipRules[0].ipRangeStart == item.ipRules[0].ipRangeEnd">{{item.ipRules[0].ipRangeStart}}</em>
+              <em ng-if="item.ipRules[0].ipRangeStart != item.ipRules[0].ipRangeEnd">{{item.ipRules[0].ipRangeStart}} - {{item.ipRules[0].ipRangeEnd}}</em>
+              <span style="color:red" ng-if="item.ipRules.length >= 2">{{item.ipRules.length -1}}</span></td>
+          <td>
+              {{item.userAgentRules[0].userAgent}}
+              <span style="color:red" ng-if="item.userAgentRules.length >= 2">{{item.userAgentRules.length -1}}</span>
+          </td>
         </tr>
         </tbody>
       </table>
